--- a/scripts/config.json
+++ b/scripts/config.json
@@ -1,7 +1,9 @@
 {
     "width":4096,
     "height":2048,
-    "thread_num":20,
+    "process_num":5,
+    "start_index":0,
+    "end_index":5,
     "image_dirs":[
         "D:\\laoshi\\tmp\\img_dir"
     ]
